--- a/JSON_for_IO-Link.yaml
+++ b/JSON_for_IO-Link.yaml
@@ -5399,10 +5399,8 @@ components:
                   enum:
                     - '1.0'
                     - '1.1'
-                parameterChecksum:
+                parameterChecks:
                   type: integer
-                  minimum: 0
-                  maximum: 4294967296
             - type: object # empty object
               additionalProperties: false
               minProperties: 0
